--- a/app/src/main/res/layout/activity_donations.xml
+++ b/app/src/main/res/layout/activity_donations.xml
@@ -12,7 +12,7 @@
 
     <include
         android:id="@+id/toolbar"
-        layout="@layout/toolbar"></include>
+        layout="@layout/toolbar"/>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -32,7 +32,7 @@
                 android:gravity="center"
                 android:text="@string/donate_header"
                 android:textColor="#8c8c8c"
-                android:textSize="26sp"></TextView>
+                android:textSize="26sp"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -43,7 +43,7 @@
                 android:gravity="center"
                 android:text="@string/donate_sub_header"
                 android:textSize="20sp"
-                android:textStyle="bold|italic"></TextView>
+                android:textStyle="bold|italic"/>
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -69,7 +69,7 @@
                         android:labelFor="@+id/donationName"
                         android:text="@string/donate_name"
                         android:textColor="#a6a6a6"
-                        android:textSize="16sp"></TextView>
+                        android:textSize="16sp"/>
 
                     <EditText
                         android:id="@+id/donationName"
@@ -78,7 +78,7 @@
                         android:layout_marginBottom="30dp"
                         android:importantForAutofill="no"
                         android:inputType="textPersonName"
-                        android:textSize="20sp"></EditText>
+                        android:textSize="20sp"/>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -89,7 +89,7 @@
                         android:labelFor="@+id/donationEmail"
                         android:text="@string/donate_email"
                         android:textColor="#a6a6a6"
-                        android:textSize="16sp"></TextView>
+                        android:textSize="16sp"/>
 
                     <EditText
                         android:id="@+id/donationEmail"
@@ -98,7 +98,7 @@
                         android:layout_marginBottom="30dp"
                         android:importantForAutofill="no"
                         android:inputType="textEmailAddress"
-                        android:textSize="20sp"></EditText>
+                        android:textSize="20sp"/>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -109,7 +109,7 @@
                         android:labelFor="@+id/donationNumber"
                         android:text="@string/donate_phone"
                         android:textColor="#a6a6a6"
-                        android:textSize="16sp"></TextView>
+                        android:textSize="16sp"/>
 
                     <EditText
                         android:id="@+id/donationNumber"
@@ -118,7 +118,7 @@
                         android:layout_marginBottom="30dp"
                         android:importantForAutofill="no"
                         android:inputType="number"
-                        android:textSize="20sp"></EditText>
+                        android:textSize="20sp"/>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -129,7 +129,7 @@
                         android:labelFor="@+id/donationAmount"
                         android:text="@string/donate_amount"
                         android:textColor="#a6a6a6"
-                        android:textSize="16sp"></TextView>
+                        android:textSize="16sp"/>
 
                     <com.adeasy.advertise.custom_view.CurrencyEditText
                         android:id="@+id/donationAmount"
@@ -138,7 +138,7 @@
                         android:layout_marginBottom="30dp"
                         android:importantForAutofill="no"
                         android:inputType="phone"
-                        android:textSize="20sp"></com.adeasy.advertise.custom_view.CurrencyEditText>
+                        android:textSize="20sp"/>
 
                     <TextView
                         android:id="@+id/donateSuccess"
@@ -151,7 +151,7 @@
                         android:padding="6dp"
                         android:textSize="16sp"
                         android:textStyle="italic|bold"
-                        android:visibility="gone"></TextView>
+                        android:visibility="gone"/>
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/amountTextInputEditText"
@@ -174,7 +174,7 @@
                         android:gravity="center"
                         android:text="@string/btn_donate_Now"
                         android:textColor="#ffffff"
-                        android:textSize="18sp"></Button>
+                        android:textSize="18sp"/>
 
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
